Modified head elements

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="Horiseon icon" href="/Code-refactor-project/Develop/assets/images/Horiseon-logo.png" type="image/png" sizes="16x16">
-    <title>Horiseon | igital Marketing Agency</title>
+    <title>Horiseon | Digital Marketing Agency</title>
 </head>
 
 <body>
