--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="Horiseon icon" href="/Code-refactor-project/Develop/assets/images/Horiseon-logo.png" type="image/png"
-        sizes="16x16">
+    <link rel="Horiseon Icon" href="/Code-refactor-project/Develop/assets/images/Horiseon-logo.png" type="image/png">
     <title>Horiseon | Digital Marketing Agency</title>
 </head>
 
@@ -32,9 +31,9 @@
     <section class="hero"></section>
 
     <main class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image"
-                class="Search-engine-optimization-image" />
+                class="search-engine-optimization-image" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -43,8 +42,9 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" alt="online reputation management image">
-            <img src="./assets/images/online-reputation-management.jpg" class="online-reputation-management-image" />
+        <article id="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online reputation management image"
+                class="online-reputation-management-image" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -53,8 +53,9 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" alt="social media marketing image">
-            <img src="./assets/images/social-media-marketing.jpg" class="social-media-marketing-image" />
+        <article id="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social media marketing image"
+                class="social-media-marketing-image" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -67,7 +68,7 @@
     <main class="benefits">
         <aside>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead generation information" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -76,7 +77,7 @@
 
         <aside>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand awareness information" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -85,7 +86,7 @@
 
         <aside>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Cost management details" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
