--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!--Browser-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -9,13 +10,16 @@
 </head>
 
 <body>
+    <!--Business name modified-->
     <header class="header">
         <h1>
             Hori<span class="seo">seo</span>n
         </h1>
+        <!--Navigation bar-->
         <nav>
             <ul>
                 <li>
+                    <!--Navigation links to business services-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -28,8 +32,10 @@
         </nav>
     </header>
 
+    <!--Image of the digital marketing team-->
     <section class="hero"></section>
-
+    
+    <!--List of company services offered by Horiseon-->
     <main class="content">
         <article id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image"
@@ -65,6 +71,7 @@
         </article>
     </main>
 
+    <!--List of benefits of using Horiseon-->
     <main class="benefits">
         <aside>
             <h3>Lead Generation</h3>
@@ -94,6 +101,7 @@
         </aside>
     </main>
 
+    <!--Footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
@@ -102,4 +110,5 @@
     </footer>
 </body>
 
+<!--End page content-->
 </html>
